add show more button

--- a/src/components/BottomSheet/BottomSheet.css
+++ b/src/components/BottomSheet/BottomSheet.css
@@ -12,7 +12,7 @@
   
   /* Handle Bar */
   .bottom-sheet-handle {
-    height: 5vh;
+    height: 10vh;
     background-color: #007bff;
     cursor: grab;
     user-select: none;
@@ -21,48 +21,16 @@
     justify-content: center;
     color: #fff;
   }
-  
-  /* Content */
-  .bottom-sheet div {
-    padding: 16px;
+
+ 
+  .showMore{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: black;
+    color: white;
+    padding: 1rem 5rem;
   }
   
-  /* Button Container */
-  .button-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 16px;
-    border-top: 1px solid #ddd;
-    background-color: #eeeeee;
-  }
-  
-  /* Button Styles */
-  .button-container button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  .button-container button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Closed State */
-  .bottom-sheet.closed {
-    height: 80px;
-  }
-  
-  /* Half-Open State */
-  .bottom-sheet.halfOpen {
-    height: 300px;
-  }
-  
-  /* Fully Open State */
-  .bottom-sheet.fullyOpen {
-    height: 600px;
-  }
   
