--- a/src/components/BottomSheet/BottomSheet.css
+++ b/src/components/BottomSheet/BottomSheet.css
@@ -10,27 +10,58 @@
    
   }
   
-  /* Handle Bar */
   .bottom-sheet-handle {
     height: 10vh;
     background-color: #007bff;
-    cursor: grab;
+    cursor: pointer;
     user-select: none;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
+
   }
 
  
   .showMore{
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     right: 0;
-    background-color: black;
     color: white;
-    padding: 1rem 5rem;
+    background-color: transparent;
+    background-image: linear-gradient(
+      180deg,
+      hsla(0, 0%, 8%, 0) 0,
+      hsla(0, 0%, 8%, 0.15) 15%,
+      hsla(0, 0%, 8%, 0.35) 29%,
+      hsla(0, 0%, 8%, 0.58) 44%,
+      hsla(0, 0%, 8%, 0.834) 60%,
+      #000000 100%,
+      #0000000d 100%
+    );
+    height: 10vh;
+    border: none;
+    cursor: pointer;
+    font-size: large;
+    font-weight: bold;
+   
   }
+
+  .hide{
+    transform: translateY(100%);
+    opacity: 0;
+    transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+  }
+  .show{   
+    transform: translateY(0) !important; 
+    opacity: 1;
+    transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
+    
+  }
+
+  
+ 
+
   
   
